# crypto-signal-analytic

./: .codeiumignore  .codex.md  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CONFIG_MIGRATION_STATUS.md  CRITICAL_BUG_ANALYSIS.md  MIGRATION_COMPLETE.md  MIGRATION_VERIFICATION.md  ML_CONFIG_GUIDE.md  Makefile  PRD_v7.0_Futures_Signal_Bot_Final_Codex.md  PRD_v8.0.md  STOP_LOSS_FIXES.md  STRATEGY_AUDIT.md  audit_manifest.csv  check_result.txt  config.toml  config.toml.example  config_strategies.toml  deletion_candidates.md  dependency_audit.md  docker-compose.yml  docs_drift_report.md  env.example  findings_report.md  lastplan.md  main.py  monitor_bot.py  pyproject.toml  replay_baseline_report.md  requirements-frozen.txt  requirements-modern.txt  requirements-optional.txt  requirements.txt  run_30min_test.bat  run_check.py  test_bot.py  test_out.txt
.serena/: project.yml
bot/: AGENTS.md  __init__.py  alerts.py  analytics.py  autotuner.py  cli.py  config.py  config_loader.py  confluence.py  dashboard.py  delivery.py  feature_flags.py  features.py  features_microstructure.py  features_structure.py  filters.py  journal.py  logging_config.py  market_data.py  market_regime.py  messaging.py  metrics.py  migrations.py  ml_filter.py  models.py  monitor_bot.py  outcomes.py  public_intelligence.py  scoring.py  secrets.py  setup_base.py  setups.py  startup_reporter.py  telegram_bot.py  telemetry.py  tracked_signals.py  tracking.py  universe.py  ws_manager.py
docs/: ARCHITECTURE.md  OPERATIONS.md  REMEDIATION_PLAN.md  STRATEGIES.md
scripts/: AGENTS.md  README.md  check_scripts_readme.py  common.py  full_indicators_registry.py  generate_audit_artifacts.py  live_check_binance_api.py  live_check_enrichments.py  live_check_indicators.py  live_smoke_bot.py  (+7 more)
(+347 files in other folders)
