[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "SIM117", "UP007"]

[tool.ruff.lint.per-file-ignores]
"scripts/generate_audit_artifacts.py" = ["E501", "I001"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
exclude = ["tests/", "bot/ml/"]

[project]
name = "crypto-signal-bot"
version = "8.0.0"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "polars>=0.20.0",
    "aiohttp>=3.9.0",
    "toml>=0.10.2",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "pydantic>=2.0.0",
]
